Fix cropper element going off screen if PHP error messages are printed on the page

--- a/assets/src/input.scss
+++ b/assets/src/input.scss
@@ -184,7 +184,6 @@
 
 .acf-image-aspect-ratio-crop-modal {
     .acf-image-aspect-ratio-crop-modal-image-container {
-        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
